Agrego animaciones a botones del portafolio

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,3 +4,25 @@
   height: 20em;
   width: 20em;
 }
+
+/* Animación de pulsación */
+.pulse {
+  background-color: #17a2f1;
+  animation: pulse 2s infinite;
+  color: white;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.8);
+    opacity: 0.7;
+  }
+  50% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.8);
+    opacity: 0.7;
+  }
+}
